# Code-Portfolio

./: LICENSE.md  README.md
Embedded_Systems/ESP32C3_Project/: MQTT_Battery_test.ino  README.md  deviceControls.cpp  deviceControls.h  messageHandler.cpp  messageHandler.h  secrets.cpp  secrets.h  systemStatus.cpp  systemStatus.h  utils.cpp  utils.h
Software_Development/C/Operating_Systems/Simple_Shell_Project/: .history  CMakeLists.txt  Command.c  Command.h  GNUmakefile  Interpreter.c  Interpreter.h  Jobs.c  Jobs.h  Parser.c  Parser.h  Pipeline.c  Pipeline.h  README.md  Scanner.c  Scanner.h  Sequence.c  Sequence.h  Shell.c  Tree.c  Tree.h  deq.c  error.h  try
Software_Development/C/Operating_Systems/Simple_Shell_Project/Test/: .history
Software_Development/C/Operating_Systems/Simple_Shell_Project/Test/Test_cd/: inp  out
Software_Development/C/Operating_Systems/Simple_Shell_Project/Test/Test_history/: exp  inp
Software_Development/C/Operating_Systems/Simple_Shell_Project/Test/Test_pwd/: exp  out
Software_Development/Python/GeoJSON-Maker/: README.md  geo-json-maker.py  geocoded-dtf-locations.csv
